Closed Bug 1902615 Opened 2 years ago Closed 2 years ago

PipeWire camera: fix duplicated camera entries

Categories

(Core :: WebRTC: Audio/Video, defect)

defect

Tracking

()

RESOLVED FIXED
129 Branch
Tracking Status
firefox128 --- fixed
firefox129 --- fixed

People

(Reporter: jgrulich, Assigned: jgrulich)

Details

Attachments

(1 file)

All camera devices are duplicated in Firefox when PipeWire camera is used. This is caused by "global" event/callback being called more than once, anyway, there is no reason for not having a simple check for node (camera) existence in the list.

This is opened as a clone of an upstream WebRTC fix we want to backport: https://webrtc-review.googlesource.com/c/src/+/354320

This is a simple backport of an WebRTC upstream change.

Upstream commit: 633a41ff8edec405cefa109ac3c8f9662a020cc1

Assignee: nobody → jgrulich
Status: NEW → ASSIGNED
Pushed by robert.mader@posteo.de: https://hg.mozilla.org/integration/autoland/rev/dc5e463eb0f5 WebRTC backport: PipeWire camera - check for node existence before adding it to the list r=pehrsons,webrtc-reviewers
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 129 Branch

Comment on attachment 9407474 [details]
Bug 1902615 - WebRTC backport: PipeWire camera - check for node existence before adding it to the list r=pehrsons

Beta/Release Uplift Approval Request

  • User impact if declined: This is a set of simple WebRTC backports allowing to use PipeWire camera with libcamera software ISP. This is needed for laptops with Snapdragon chips. There is no risk backporting these patches, they are simple and straightforward and also PipeWire camera is not enabled by default in Firefox. Since the next Firefox 128 is an ESR release, we think it makes sense to include these fixes.
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Simple fix that just checks a camera device existence in a map and avoids adding it to the map twice. There is no risk backporting this change.
  • String changes made/needed:
  • Is Android affected?: No
Attachment #9407474 - Flags: approval-mozilla-beta?

Comment on attachment 9407474 [details]
Bug 1902615 - WebRTC backport: PipeWire camera - check for node existence before adding it to the list r=pehrsons

Approved for 128.0b5.

Attachment #9407474 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: