Bug 1902615 - WebRTC backport: PipeWire camera - check for node existence before adding it to the list r=pehrsons,webrtc-reviewers

This is a simple backport of an WebRTC upstream change.

Upstream commit: 633a41ff8edec405cefa109ac3c8f9662a020cc1

Differential Revision: https://phabricator.services.mozilla.com/D213749